Remove the padding for the "#hourly-forecast-container" element and ensure that the only space in the container is gaps between each column (on all devices and for all viewport sizes).

--- a/src/components/_hourlyForecast.scss
+++ b/src/components/_hourlyForecast.scss
@@ -19,7 +19,7 @@
   justify-content: space-between;
   align-items: center;
   column-gap: .5rem;
-  padding: .5rem;
+  // padding: .5rem;
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-behavior: smooth;
@@ -56,7 +56,7 @@
     div {
 
       padding: 0;
-      width: 19.5%;
+      width: 19.6%;
 
     }
 
